feat!: Generate CSS files
* Removes the individual API operations for retrieving font information
* Adds an API operation for fetching data on all subsets
* Change API route /download/ => /fonts/
* Bump API version
* Add CSS to zip file in web client
