# api/api.yml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 security: []
 info:
   title: font.delivery REST API
-  version: 1.7.0
+  version: 2.0.0
   description: The REST API for font.delivery
   license:
     name: MIT
@@ -23,7 +23,7 @@ paths:
                 type: array
                 items:
                   type: object
-                  required: ["id", "name", "designer"]
+                  required: ["id", "name", "designer", "subsets", "weights", "styles"]
                   properties:
                     id:
                       type: string
@@ -37,67 +37,37 @@ paths:
                       type: string
                       description: Name(s) of the designer(s)
                       example: "Omnibus-Type"
-  /fonts/{id}.json:
-    get:
-      operationId: getFontByID
-      summary: Get details for a specific font family
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: The ID of the font family
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Successful response
-          content:
-            application/json:
-              schema:
-                type: object
-                required: ["id", "subsets", "weights", "styles"]
-                properties:
-                  id:
-                    type: string
-                    description: Unique identifier for the font family
-                    example: "archivo-narrow"
-                  name:
-                    type: string
-                    description: Name of the font family
-                    example: "Archivo Narrow"
-                  subsets:
-                    type: array
-                    description: Available subsets for the font family
-                    example: ["latin", "latin-ext", "vietnamese"]
-                    items:
-                      type: string
-                      enum:
-                        - latin
-                        - latin-ext
-                        - vietnamese
-                        - cyrillic
-                        - cyrillic-ext
-                        - hebrew
-                        - greek
-                        - greek-ext
-                  weights:
-                    type: array
-                    description: Available font weights for the font family
-                    example: ["300", "400", "500"]
-                    items:
-                      type: string
-                  styles:
-                    type: array
-                    description: Available styles for the font family
-                    example: ["normal", "italic"]
-                    items:
-                      type: string
-                      enum:
-                        - normal 
-                        - italic
-        '404':
-          description: Font family not found
-  /download/{id}_{subset}_{weight}_{style}.woff2:
+                    subsets:
+                      type: array
+                      description: Available subsets for the font family
+                      example: ["latin", "latin-ext", "vietnamese"]
+                      items:
+                        type: string
+                        enum:
+                          - latin
+                          - latin-ext
+                          - vietnamese
+                          - cyrillic
+                          - cyrillic-ext
+                          - hebrew
+                          - greek
+                          - greek-ext
+                    weights:
+                      type: array
+                      description: Available font weights for the font family
+                      example: ["300", "400", "500"]
+                      items:
+                        type: string
+                    styles:
+                      type: array
+                      description: Available styles for the font family
+                      example: ["normal", "italic"]
+                      items:
+                        type: string
+                        enum:
+                          - normal
+                          - italic
+  /fonts/{id}_{subset}_{weight}_{style}.woff2:
     get:
       operationId: downloadFont
       summary: Download a font
@@ -148,3 +118,36 @@ paths:
                 format: binary
         '404':
           description: Font not found
+  /subsets.json:
+    get:
+      operationId: getSubsets
+      summary: Get a list of all subsets
+      description: Returns a list of all subsets supported by the API, along with their associated Unicode ranges. This is useful for generating @font-face rules in CSS.
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  required: ["subset", "ranges"]
+                  properties:
+                    subset:
+                      type: string
+                      description: The name of the subset
+                      example: latin
+                      enum:
+                        - latin
+                        - latin-ext
+                        - vietnamese
+                        - cyrillic
+                        - cyrillic-ext
+                        - hebrew
+                        - greek
+                        - greek-ext
+                    ranges:
+                      type: string
+                      description: The Unicode ranges covered by the subset, formatted as a comma-separated list of hexadecimal ranges
+                      example: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
